# mongodb-mcp

./: .env.example  client.py  google_client.py  main.py  openai_client.py  pyproject.toml  server.py
