[project]
name = "mcp-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.25.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.93.0",
    "pymongo>=4.13.2",
]
